# docs/swagger.json
@@ -47,13 +47,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     }
                 }
@@ -91,13 +97,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     }
                 }
@@ -135,19 +147,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     }
                 }
@@ -185,13 +197,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     }
                 }
@@ -217,16 +235,72 @@
                             "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     }
                 }
             }
         },
         "/sku": {
+            "get": {
+                "description": "List Product SKU",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "sku"
+                ],
+                "summary": "List SKU",
+                "parameters": [
+                    {
+                        "description": "SKU data",
+                        "name": "sku",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ProductSKUCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new SKU for a product",
                 "consumes": [
@@ -260,13 +334,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     }
                 }
@@ -304,13 +378,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse"
                         }
                     }
                 }
@@ -350,13 +424,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     }
                 }
@@ -396,19 +476,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     }
                 }
@@ -434,13 +514,13 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     }
                 }
@@ -478,19 +558,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     }
                 }
@@ -516,13 +596,13 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     }
                 }
@@ -560,19 +640,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     }
                 }
@@ -610,19 +690,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     }
                 }
@@ -662,19 +742,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     }
                 }
@@ -712,19 +792,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/fiber.Map"
+                            "$ref": "#/definitions/github_com_MociW_store-api-golang_internal_user_model_dto.ApiUserResponse"
                         }
                     }
                 }
@@ -732,10 +812,6 @@
         }
     },
     "definitions": {
-        "fiber.Map": {
-            "type": "object",
-            "additionalProperties": true
-        },
         "github_com_MociW_store-api-golang_internal_product_model_dto.ApiProductResponse": {
             "type": "object",
             "properties": {
@@ -951,8 +1027,7 @@
         "github_com_MociW_store-api-golang_internal_user_model_dto.UserLoginRequest": {
             "type": "object",
             "required": [
-                "email",
-                "password"
+                "email"
             ],
             "properties": {
                 "email": {
@@ -960,9 +1035,7 @@
                     "maxLength": 100
                 },
                 "password": {
-                    "type": "string",
-                    "maxLength": 100,
-                    "minLength": 8
+                    "type": "string"
                 }
             }
         },
