# internal/product/controller/sku_controller.go
@@ -1,8 +1,6 @@
 package controller
 
 import (
-	"log"
-
 	"github.com/MociW/store-api-golang/internal/product"
 	"github.com/MociW/store-api-golang/internal/product/model/dto"
 	"github.com/gofiber/fiber/v2"
@@ -18,6 +16,7 @@ func NewProductSKUController(skuService product.ProductSKUService) product.Produ
 }
 
 // CreateSKU godoc
+//
 //	@Summary		Create a SKU
 //	@Description	Create a new SKU for a product
 //	@Tags			sku
@@ -25,21 +24,25 @@ func NewProductSKUController(skuService product.ProductSKUService) product.Produ
 //	@Produce		json
 //	@Param			sku	body		dto.ProductSKUCreateRequest	true	"SKU data"
 //	@Success		200	{object}	dto.ApiProductResponse
-//	@Failure		400	{object}	fiber.Map
-//	@Failure		500	{object}	fiber.Map
+//	@Failure		400	{object}	dto.ApiProductResponse
+//	@Failure		500	{object}	dto.ApiProductResponse
 //	@Router			/sku [post]
 func (product *ProductSKUContollerImpl) CreateSKU(c *fiber.Ctx) error {
 	claim := c.Locals("user").(*jwt.MapClaims)
 	userID, ok := (*claim)["id"].(string)
 	if !ok {
-		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "Invalid user ID in token"})
+		return c.Status(fiber.StatusUnauthorized).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusUnauthorized,
+			Message: "Invalid user ID in token",
+		})
 	}
 
 	request := new(dto.ProductSKUCreateRequest)
 	err := c.BodyParser(request)
 	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"error": "Invalid request payload",
+		return c.Status(fiber.StatusBadRequest).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusBadRequest,
+			Message: "Invalid request payload",
 		})
 	}
 
@@ -47,8 +50,10 @@ func (product *ProductSKUContollerImpl) CreateSKU(c *fiber.Ctx) error {
 
 	response, err := product.SKUService.CreateSKU(c.UserContext(), request)
 	if err != nil {
-		log.Printf("Error creating product: %v", err)
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Failed to Delete product"})
+		return c.Status(fiber.StatusInternalServerError).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusInternalServerError,
+			Message: "Failed to Delete product",
+		})
 	}
 
 	// Return the response
@@ -60,6 +65,7 @@ func (product *ProductSKUContollerImpl) CreateSKU(c *fiber.Ctx) error {
 }
 
 // DeleteSKU godoc
+//
 //	@Summary		Delete a SKU
 //	@Description	Delete a SKU by ID
 //	@Tags			sku
@@ -67,21 +73,25 @@ func (product *ProductSKUContollerImpl) CreateSKU(c *fiber.Ctx) error {
 //	@Produce		json
 //	@Param			request	body		dto.ProductSKUDeleteRequest	true	"SKU delete request"
 //	@Success		200		{object}	dto.ApiProductResponse
-//	@Failure		400		{object}	fiber.Map
-//	@Failure		500		{object}	fiber.Map
+//	@Failure		400		{object}	dto.ApiProductResponse
+//	@Failure		500		{object}	dto.ApiProductResponse
 //	@Router			/sku [delete]
 func (product *ProductSKUContollerImpl) DeleteSKU(c *fiber.Ctx) error {
 	claim := c.Locals("user").(*jwt.MapClaims)
 	userID, ok := (*claim)["id"].(string)
 	if !ok {
-		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "Invalid user ID in token"})
+		return c.Status(fiber.StatusUnauthorized).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusUnauthorized,
+			Message: "Invalid user ID in token",
+		})
 	}
 
 	request := new(dto.ProductSKUDeleteRequest)
 	err := c.BodyParser(request)
 	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"error": "Invalid request payload",
+		return c.Status(fiber.StatusBadRequest).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusBadRequest,
+			Message: "Invalid request payload",
 		})
 	}
 
@@ -89,8 +99,10 @@ func (product *ProductSKUContollerImpl) DeleteSKU(c *fiber.Ctx) error {
 
 	err = product.SKUService.DeleteSKU(c.UserContext(), request)
 	if err != nil {
-		log.Printf("Error creating product: %v", err)
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Failed to Delete product"})
+		return c.Status(fiber.StatusInternalServerError).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusInternalServerError,
+			Message: "Failed to Delete product",
+		})
 	}
 
 	return c.Status(fiber.StatusOK).JSON(dto.ApiProductResponse{
@@ -99,18 +111,35 @@ func (product *ProductSKUContollerImpl) DeleteSKU(c *fiber.Ctx) error {
 	})
 }
 
+// FindSKU godoc
+//
+//	@Summary		Find SKU
+//	@Description	Find Product SKU
+//	@Tags			sku
+//	@Accept			json
+//	@Produce		json
+//	@Param			sku	body		dto.ProductSKUCreateRequest	true	"SKU data"
+//	@Success		200	{object}	dto.ApiProductResponse
+//	@Failure		400	{object}	dto.ApiProductResponse
+//	@Failure		401	{object}	dto.ApiProductResponse
+//	@Failure		500	{object}	dto.ApiProductResponse
+//	@Router			/sku [get]
 func (product *ProductSKUContollerImpl) FindSKU(c *fiber.Ctx) error {
 	claim := c.Locals("user").(*jwt.MapClaims)
 	userID, ok := (*claim)["id"].(string)
 	if !ok {
-		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "Invalid user ID in token"})
+		return c.Status(fiber.StatusUnauthorized).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusUnauthorized,
+			Message: "Invalid user ID in token",
+		})
 	}
 
 	request := new(dto.ProductSKUFindRequest)
 	err := c.BodyParser(request)
 	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"error": "Invalid request payload",
+		return c.Status(fiber.StatusBadRequest).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusBadRequest,
+			Message: "Invalid request payload",
 		})
 	}
 
@@ -118,8 +147,10 @@ func (product *ProductSKUContollerImpl) FindSKU(c *fiber.Ctx) error {
 
 	response, err := product.SKUService.FindSKU(c.UserContext(), request)
 	if err != nil {
-		log.Printf("Error creating product: %v", err)
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Failed to Find Data"})
+		return c.Status(fiber.StatusInternalServerError).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusInternalServerError,
+			Message: "Failed to Find Data",
+		})
 	}
 
 	return c.Status(fiber.StatusOK).JSON(dto.ApiProductResponse{
@@ -129,18 +160,35 @@ func (product *ProductSKUContollerImpl) FindSKU(c *fiber.Ctx) error {
 	})
 }
 
+// ListSKU godoc
+//
+//	@Summary		List SKU
+//	@Description	List Product SKU
+//	@Tags			sku
+//	@Accept			json
+//	@Produce		json
+//	@Param			sku	body		dto.ProductSKUCreateRequest	true	"SKU data"
+//	@Success		200	{object}	dto.ApiProductResponse
+//	@Failure		400	{object}	dto.ApiProductResponse
+//	@Failure		401	{object}	dto.ApiProductResponse
+//	@Failure		500	{object}	dto.ApiProductResponse
+//	@Router			/sku [get]
 func (product *ProductSKUContollerImpl) ListSKU(c *fiber.Ctx) error {
 	claim := c.Locals("user").(*jwt.MapClaims)
 	userID, ok := (*claim)["id"].(string)
 	if !ok {
-		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "Invalid user ID in token"})
+		return c.Status(fiber.StatusUnauthorized).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusUnauthorized,
+			Message: "Invalid user ID in token",
+		})
 	}
 
 	request := new(dto.ProductSKUListRequest)
 	err := c.BodyParser(request)
 	if err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"error": "Invalid request payload",
+		return c.Status(fiber.StatusBadRequest).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusBadRequest,
+			Message: "Invalid request payload",
 		})
 	}
 
@@ -148,8 +196,10 @@ func (product *ProductSKUContollerImpl) ListSKU(c *fiber.Ctx) error {
 
 	response, err := product.SKUService.ListSKU(c.UserContext(), request.ProductID, request.UserID)
 	if err != nil {
-		log.Printf("Error creating product: %v", err)
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Failed to Find Data"})
+		return c.Status(fiber.StatusInternalServerError).JSON(dto.ApiProductResponse{
+			Status:  fiber.StatusInternalServerError,
+			Message: "Failed to Find Data",
+		})
 	}
 
 	return c.Status(fiber.StatusOK).JSON(dto.ApiProductResponse{
